# wecom-pro

./: .npmignore  BUILD_NPM.md  CHANGELOG.md  Cargo.toml  PUBLISH_NPM.md  README.md  RELEASE.md  build-npm.sh  commitlint.config.js  justfile  package.json  pnpm-lock.yaml  release.toml
.changeset/: config.json
.github/workflows/: build.yml
examples/: multi_bot_guide.md  multi_bot_usage.rs
scripts/: sync-version.sh
skills/wecomcli-create-meeting/: SKILL.md
skills/wecomcli-edit-meeting/: SKILL.md
skills/wecomcli-edit-todo/: SKILL.md
skills/wecomcli-get-meeting/: SKILL.md
skills/wecomcli-get-msg/: SKILL.md
skills/wecomcli-get-msg/references/: api-get-message.md  api-get-msg-chat-list.md  api-get-msg-media.md  api-send-message.md
skills/wecomcli-get-todo-detail/: SKILL.md
skills/wecomcli-get-todo-list/: SKILL.md
skills/wecomcli-lookup-contact/: SKILL.md
skills/wecomcli-manage-doc/: SKILL.md
skills/wecomcli-manage-schedule/: SKILL.md
skills/wecomcli-manage-schedule/references/: api-check-availability.md  api-create-schedule.md  api-get-schedule-detail.md  api-update-schedule.md
skills/wecomcli-manage-smartsheet-data/: SKILL.md
skills/wecomcli-manage-smartsheet-data/references/: cell-value-formats.md
skills/wecomcli-manage-smartsheet-schema/: SKILL.md
src/: cli_output.rs  config.rs  constants.rs  help.rs  json_rpc.rs  main.rs
src/auth/: bot.rs  migrate.rs  mod.rs  qrcode.rs
src/cmd/: bot.rs  call.rs  help_all.rs  init.rs  mod.rs
src/crypto/: keystore.rs
src/mcp/: config.rs  mod.rs
