[package]
name = "wecom-pro"
version = "0.1.2"
edition = "2024"
authors = ["Liangdi <wu@liangdi.me>"]
description = "企业微信命令行工具 - 多 Bot 支持版本，从 WecomTeam/wecom-cli fork 而来"
license = "MIT"
repository = "https://github.com/Liangdi/wecom-pro"
homepage = "https://github.com/Liangdi/wecom-pro"
readme = "README.md"
keywords = ["wecom", "wechat", "cli", "bot", "enterprise-wechat"]
categories = ["command-line-utilities"]

[[bin]]
name = "wecom-pro"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "multipart", "stream", "rustls"] }
dotenvy = "0.15.7"
dirs = "6.0.0"
base64 = "0.22"
mime = "0.3"
mime_guess = "2"
infer = "0.19"
rand = "0.10"
hex = "0.4"
sha2 = "0.11"
aes-gcm = "0.10"
keyring = { version = "3", features = ["apple-native", "linux-native"] }
sanitize-filename = "0.6.0"
tempfile = "3.27.0"
cliclack = "0.5"
qr2term = "0.3"

[profile.release]
opt-level = "z"     # 优化大小
lto = true          # 链接时优化
codegen-units = 1   # 更好的优化
strip = true        # 移除符号
panic = "abort"     # 减小二进制大小
